# DV1537Project-AlienAdventure

./: .gitignore  .gitmodules  AlienAdventure.h.in  CMakeLists.txt  Info.plist.in  README.md
game/: AlienAdventure.h.in  CMakeLists.txt  defaults.cfg
game/include/Game/: Cloud.hpp  CollectibleCoin.hpp  CollectibleHealth.hpp  EnemyBee.hpp  EnemyBeeBlack.hpp  EnemySlimeBlue.hpp  EnemySlimeGreen.hpp  EnemySlimePurple.hpp  EnemySnail.hpp  EnemySnailMushroom.hpp  EnemyWormGreen.hpp  EnemyWormPink.hpp  Game.hpp  GameOverMenuObject.hpp  GameScene.hpp  Hud.hpp  ICollectible.hpp  IEnemy.hpp  LevelCompleteMenuObject.hpp  ParallaxBackground.hpp  PauseMenuObject.hpp  Player.hpp  SplashObject.hpp  SplashScene.hpp  Sun.hpp  TileMap.hpp  World.hpp
game/include/Game/classes/: Cloud.hpp  CollectibleCoin.hpp  CollectibleHealth.hpp  EnemyBee.hpp  EnemyBeeBlack.hpp  EnemySlimeBlue.hpp  EnemySlimeGreen.hpp  EnemySlimePurple.hpp  EnemySnail.hpp  EnemySnailMushroom.hpp  EnemyWormGreen.hpp  EnemyWormPink.hpp  Game.hpp  GameOverMenuObject.hpp  GameScene.hpp  Hud.hpp  LevelCompleteMenuObject.hpp  ParallaxBackground.hpp  PauseMenuObject.hpp  Player.hpp  SplashObject.hpp  SplashScene.hpp  Sun.hpp  TileMap.hpp  World.hpp
game/include/Game/interfaces/: ICollectible.hpp  IEnemy.hpp
game/include/classes/: CollectibleCoin.hpp  EnemyBee.hpp  EnemyBeeBlack.hpp  EnemySlimeBlue.hpp  EnemySlimeGreen.hpp  EnemySlimePurple.hpp  EnemySnailMushroom.hpp  EnemyWormGreen.hpp  LevelCompleteMenuObject.hpp  PauseMenuObject.hpp  Sun.hpp  TileMap.hpp
game/include/interfaces/: ICollectible.hpp
game/resources/: Level1.tmx  icon.icns  level_test.tmx
game/src/: main.cpp
game/src/Game/: Cloud.cpp  CollectibleCoin.cpp  CollectibleHealth.cpp  EnemyBee.cpp  EnemyBeeBlack.cpp  EnemySlimeBlue.cpp  EnemySlimeGreen.cpp  EnemySlimePurple.cpp  EnemySnail.cpp  EnemySnailMushroom.cpp  EnemyWormGreen.cpp  EnemyWormPink.cpp  Game.cpp  GameOverMenuObject.cpp  GameScene.cpp  Hud.cpp  ICollectible.cpp  IEnemy.cpp  LevelCompleteMenuObject.cpp  ParallaxBackground.cpp  PauseMenuObject.cpp  Player.cpp  SplashObject.cpp  SplashScene.cpp  Sun.cpp  TileMap.cpp  World.cpp  main.cpp
game/src/Game/classes/: Cloud.cpp  CollectibleCoin.cpp  CollectibleHealth.cpp  EnemyBee.cpp  EnemyBeeBlack.cpp  EnemySlimeBlue.cpp  EnemySlimeGreen.cpp  EnemySlimePurple.cpp  EnemySnail.cpp  EnemySnailMushroom.cpp  EnemyWormGreen.cpp  EnemyWormPink.cpp  Game.cpp  GameOverMenuObject.cpp  GameScene.cpp  Hud.cpp  LevelCompleteMenuObject.cpp  ParallaxBackground.cpp  PauseMenuObject.cpp  Player.cpp  SplashObject.cpp  SplashScene.cpp  Sun.cpp  TileMap.cpp  World.cpp
game/src/Game/interfaces/: ICollectible.cpp  IEnemy.cpp
game/src/classes/: EnemySlimeGreen.cpp  EnemySlimePurple.cpp  EnemySnail.cpp  EnemySnailMushroom.cpp  LevelCompleteMenuObject.cpp  PauseMenuObject.cpp  SplashObject.cpp  Sun.cpp
game/src/interfaces/: IEnemy.cpp
include/: AnimationFrame.hpp  AnimationHandler.hpp  AnimationSequence.hpp  Background.hpp  Camera.hpp  Collectible.hpp  CollectibleBarObject.hpp  CollectibleCoin.hpp  Core.hpp  Enemy.hpp  EventHandler.hpp  Game.hpp  GameObject.hpp  HealthBarObject.hpp  Hud.hpp  LevelHandler.hpp  Menu.hpp  ObjectHandler.hpp  Player.hpp  PropertyHandler.hpp  Renderer.hpp  ResourceHandler.hpp  StaticFrame.hpp  TileMap.hpp  WindowHandler.hpp  World.hpp
include/collectible/: Collectible.hpp  CollectibleCoin.hpp  CollectibleHealth.hpp
include/enemy/: Enemy.hpp  EnemyBee.hpp  EnemyBeeBlack.hpp  EnemyFishBlue.hpp  EnemyFishGreen.hpp  EnemyFishPink.hpp  EnemyFrog.hpp  EnemyMouse.hpp  EnemySlimeBlue.hpp  EnemySlimeGreen.hpp  EnemySlimePurple.hpp  EnemySnail.hpp  EnemySnailMushroom.hpp  EnemyWormGreen.hpp  EnemyWormPink.hpp
lib/: CMakeLists.txt  CoreGameLib.h.in
lib/include/Core/: AnimatedEntity.hpp  Animation.hpp  Camera.hpp  ConfigParser.hpp  EventHandler.hpp  IEntity.hpp  IGame.hpp  IGameObject.hpp  IMenuObject.hpp  IScene.hpp  Level.hpp  ObjectHandler.hpp  PropertyHandler.hpp  ResourceHandler.hpp  SceneHandler.hpp  SpriteEntity.hpp  Tilelayer.hpp  Tileset.hpp  WindowHandler.hpp
lib/include/Core/classes/: AnimatedEntity.hpp  Camera.hpp  EventHandler.hpp  ObjectHandler.hpp  SpriteEntity.hpp
lib/include/Core/interfaces/: IEntity.hpp  IMenuObject.hpp
lib/include/classes/: Animation.hpp  ResourceHandler.hpp  SceneHandler.hpp  WindowHandler.hpp
lib/include/interfaces/: IGameObject.hpp  IMenuObject.hpp  IScene.hpp
lib/src/Core/: AnimatedEntity.cpp  Animation.cpp  Camera.cpp  ConfigParser.cpp  EventHandler.cpp  IEntity.cpp  IGame.cpp  IGameObject.cpp  IMenuObject.cpp  IScene.cpp  Level.cpp  ObjectHandler.cpp  SceneHandler.cpp  SpriteEntity.cpp  Tilelayer.cpp  Tileset.cpp  WindowHandler.cpp
lib/src/Core/classes/: AnimatedEntity.cpp  Animation.cpp  Camera.cpp  EventHandler.cpp  Level.cpp  ObjectHandler.cpp  SceneHandler.cpp  SpriteEntity.cpp  WindowHandler.cpp
lib/src/Core/interfaces/: IEntity.cpp  IGame.cpp  IGameObject.cpp  IMenuObject.cpp  IScene.cpp
lib/src/classes/: AnimatedEntity.cpp  Camera.cpp  ObjectHandler.cpp  SpriteEntity.cpp  WindowHandler.cpp
lib/src/interfaces/: IEntity.cpp  IGame.cpp  IGameObject.cpp  IMenuObject.cpp
resources/: Level.txt
src/: AnimationFrame.cpp  AnimationHandler.cpp  AnimationSequence.cpp  Background.cpp  Camera.cpp  Collectible.cpp  CollectibleBarObject.cpp  CollectibleCoin.cpp  CollectibleHealth.cpp  Enemy.cpp  EventHandler.cpp  Game.cpp  GameObject.cpp  HealthBarObject.cpp  Hud.cpp  LevelHandler.cpp  Menu.cpp  ObjectHandler.cpp  Player.cpp  Renderer.cpp  StaticFrame.cpp  TileMap.cpp  WindowHandler.cpp  World.cpp  main.cpp
(+90 files in other folders)
